--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@
     background-color: #012970;
     padding:  0.2rem 1.5rem;
     border-radius: 2rem;
+    box-shadow: 1px 2px 3px 4px  rgba(19, 78, 241, 0.3);
 }
 .aboutMe button a {
     font-size: 2.5rem;
