skills section updated

--- a/style.css
+++ b/style.css
@@ -237,8 +237,14 @@ header .about span {
     margin: 2rem;
     width: 6.8rem;
     height: 6rem;
-    background-color: black;
+    background-color: rgba(0, 0, 22, 0.9);;
     border-radius: 15px;
+}
+#Skill .grid .bar:hover {
+    background-color: black;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    width: 6.9rem;
+    height: 6.1rem;
 }
 #Skill .grid .bar img {
     height: 4.5rem;
