--- a/style.css
+++ b/style.css
@@ -253,7 +253,62 @@ header .about span {
     font-size: 1.5rem;
     color: white;
 }
+#Education {
+    background-color: rgb(211, 236, 245);
+    padding-bottom: 2rem;
+}
 
+#Education .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem 0rem;
+}
+#Education .header img {
+    height: 3rem;
+}
+#Education .header .title {
+    font-size: 2.5rem;
+    font-weight: bolder;
+}
+#Education .header .title span {
+    color: purple;
+}
+#Education .description {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+}
+#Education .institute {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    width: 71rem;
+    margin: auto;
+    background-color: white;
+    margin-bottom: 2.5rem;
+    box-shadow: 2px 2px 2px 2px rgb(165, 163, 163);
+}
+#Education .institute .image  {
+    padding-right: 2rem;
+}
+#Education .institute .image img {
+    height: 10rem;
+}
+#Education .institute .content p.Degree {
+    font-size: 2.5rem;
+    color:#012970
+}
+#Education .institute .content p.collegeName {
+    font-size: 1.5rem;
+    color: black; 
+}
+#Education .institute .content p.year {
+    font-size: 1.5rem;
+    color: green; 
+    font-weight: 500;
+
+}
 
 
 
